# vespeiro

./: .env.example  .gitignore  LICENSE  README.md  vespeiro.html
backend/: pyproject.toml  run_alert.py  run_analysis.py  run_migration.py  run_pipeline.py  run_scrape.py  run_stats.py  seed_sources.py
backend/alembic/versions/: 2026_05_28_rls_public_api.sql
backend/data/: vespeiro.db
backend/reports/divergence/: demo-cluster.json
backend/scrapy_project/: .gitignore  scrapy.cfg
backend/scrapy_project/publico/: items.py  settings.py
backend/src/alerts/: __init__.py  telegram.py
backend/src/config/: __init__.py  ownership.py  ownership.yaml  settings.py  sources.yaml
backend/src/db/: models.py  session.py
backend/src/pipeline/: embedder.py  matcher.py  monitor.py  sentiment.py
backend/src/public_sources/: __init__.py  dados_gov_pt.py  erc_advertising.py
backend/src/scrapers/: base.py  extractors.py  loader.py
backend/src/stats/: __init__.py  generator.py  models.py
backend/src/supabase/: client.py
backend/tests/: conftest.py  test_alerts.py  test_correlation.py  test_dados_gov_pt.py  test_dependency_analyzer.py  test_divergence_comparator.py  test_divergence_extractor.py  test_divergence_reporter.py  test_dre_spider.py  test_embedder.py  test_erc_advertising.py  test_gap.py  test_government_spider.py  test_lusa_dependency.py  test_matcher.py  test_ownership.py  test_parliament_spider.py  test_personnel.py  test_scrapers.py  test_sentiment.py  test_silence.py
backend/tests/fixtures/: lusa_artigo.txt  publico_versao.txt  reuters_article.txt  (+1 more)
(+61 files in other folders)
