[project]
name = "vespeiro"
version = "0.1.0"
description = "Media Narrative Intelligence Platform — Zero-cost media monitoring for Portugal"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "trafilatura>=1.8.0",
    "newspaper4k>=0.9.0",
    "lingua-py>=2.0.0",
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "pysentimiento>=0.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "supabase>=2.0.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = false
